--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.12"
+    "firebase": "^9.0.0",
+    "nodemon": "^2.0.12",
+    "shortid": "^2.2.16"
   }
 }
